assets/css/sportspress.css
/* SportsPress */

/* Header */
.sp-header {
	position: relative;
	overflow: visible;
}

/* Templates */
.sp-template {
	margin-bottom: 1.5em;
}
.sp-template-logo,
.sp-template-photo {
	float: left;
	margin-bottom: 2em;
	margin-right: 2em;
	max-width: 50%;
}
.sp-template-event-logos {
	text-align: center;
}
.sp-template-details {
	display: inline;
}
.sp-template-details dl {
	overflow: hidden;
}

/* Data Tables */
.sp-scrollable-table-wrapper {
	overflow: auto;
}
.sp-data-table {
	width: 100%;
    border-spacing: 0;
	border-collapse: separate;
}
.sp-paginated-table {
	margin-bottom: 0;
}
.sp-data-table thead th {
	white-space: nowrap;
}
.sp-data-table thead .sorting,
.sp-data-table thead .sorting_asc,
.sp-data-table thead .sorting_desc,
.sp-data-table thead .sorting_asc_disabled,
.sp-data-table thead .sorting_desc_disabled {
	cursor: pointer;
}
.sp-data-table tbody a {
	text-decoration: none;
}
.sp-data-table .sorting:after,
.sp-data-table .sorting_asc:after,
.sp-data-table .sorting_desc:after {
	font-family: dashicons;
}
.sp-data-table .sorting:after {
	content: "\f156";
	color: transparent;
	position: absolute;
}
.sp-data-table .sorting_asc:after {
	content: "\f142";
	position: absolute;
}
.sp-data-table .sorting_desc:after {
	content: "\f140";
	position: absolute;
}
.sp-data-table .data-number,
.sp-data-table .data-rank {
	width: 1px;
}

/* Pagination */
.sp-table-wrapper .dataTables_paginate {
	text-align: center;
}
.sp-table-wrapper .dataTables_paginate .paginate_button {
	color: #00a69c;
	margin: 0.5em;
	cursor: pointer;
	display: inline-block;
}
.sp-table-wrapper .dataTables_paginate .previous {
	float: left;
	margin-left: 0;
}
.sp-table-wrapper .dataTables_paginate .next {
	float: right;
	margin-right: 0;
}
.sp-table-wrapper .dataTables_paginate .current {
	opacity: 0.5;
	color: inherit;
	cursor: default;
}
.sp-table-wrapper .dataTables_paginate .disabled {
	opacity: 0;
	cursor: default;
}

/* League Table */
.sp-league-table td {
	line-height: 2em;
}
.sp-league-table .data-name .team-logo {
	width: 2em;
	height: 2em;
	margin-right: 0.25em;
	display: block;
	float: left;
	text-align: center;
}
.sp-league-table .data-name .team-logo img {
	width: auto;
	height: auto;
	max-width: 2em;
	max-height: 2em;
}

/* Player List */
.sp-player-list td {
	line-height: 2em;
}
.sp-player-list .data-name .player-photo {
	width: 2em;
	height: 2em;
	margin-right: 0.25em;
	display: block;
	float: left;
	text-align: center;
}
.sp-player-list .data-name .player-photo img {
	width: auto;
	height: auto;
	max-width: 2em;
	max-height: 2em;
}

/* Button */
.sp-button {
	border: none;
	cursor: pointer;
}

/* Event Performance */
.sp-event-performance .sub-in,
.sp-event-performance .sub-out {
	cursor: default;
}
.sp-event-performance .sub-in:before,
.sp-event-performance .sub-out:before {
	font-family: dashicons;
}
.sp-event-performance .sub-in:before {
	content: "\f140";
}
.sp-event-performance .sub-out:before {
	content: "\f142";
}
.sp-event-performance .sp-performance-icons {
	width: 25%;
}

/* Event Calendar */
.sp-event-calendar {
    border-spacing: 0;
	border-collapse: separate;
}
.sp-event-calendar a {
	text-decoration: none;
}
.sp-event-calendar tbody td, .sp-event-calendar thead th {
	text-align: center;
}
.sp-event-calendar #next {
	text-align: right;
}
.sp-event-calendar #prev {
	text-align: left;
}

/* Event List */
.sp-event-list .data-date date,
.sp-event-list .data-time date {
	display: none !important;
}
.sp-event-list .data-article {
	white-space: nowrap;
}
.sp-event-list .data-article a .dashicons {
	padding-right: 3px;
}
.sp-event-list .data-time,
.sp-event-list .data-results {
	white-space: nowrap;
}
.sp-event-list .data-teams img,
.sp-event-list .data-home img,
.sp-event-list .data-away img {
	display: inline-block;
	vertical-align: middle;
}

/* Event Blocks */
.sp-event-blocks thead {
	display: none;
}
.sp-event-blocks .sp-event-date,
.sp-event-blocks .sp-event-time,
.sp-event-blocks .sp-event-results,
.sp-event-blocks .sp-event-title {
	text-align: center;
	display: block;
	margin: 10px 20%;
	padding: 0 20px;
	clear: none;
}
.sp-event-blocks .sp-event-league,
.sp-event-blocks .sp-event-season,
.sp-event-blocks .sp-event-venue {
	text-align: center;
	margin: 0 20%;
	padding: 0 20px;
}
.sp-event-blocks .team-logo {
	width: 20%;
	height: auto;
	margin: 10px;
	max-width: 6em;
}
.sp-event-blocks .logo-odd {
	float: left;
}
.sp-event-blocks .logo-even {
	float: right;
}
.sp-event-blocks .team-logo img {
	max-width: 100%;
	max-height: 100%;
	width: auto;
	height: auto;
}
.widget .sp-event-blocks .sp-event-title {
	margin: 10px;
	padding: 0;
}

/* Countdowns */
.sp-template-countdown .event-name {
	overflow: auto;
}
.sp-template-countdown .team-logo {
	width: 20%;
	height: auto;
	max-width: 4em;
}
.sp-template-countdown .logo-odd {
	float: left;
	margin-right: 10px;
}
.sp-template-countdown .logo-even {
	float: right;
	margin-left: 10px;
}
.sp-template-countdown .team-logo img {
	max-width: 100%;
	max-height: 100%;
	width: auto;
	height: auto;
}
.sp-template-countdown .sp-countdown {
	clear: both;
}

/* Google Maps */
.sp-google-map {
	height: 320px;
}
.sp-google-map img {
	max-width: none !important;
}
.sp-venue-map {
	margin-bottom: 4em;
}

/* View all */
.sp-view-all-link {
	display: block;
	margin-top: 0.5em;
}

/* Alternate */
.sp-data-table tbody tr.odd {
	background: rgba(0, 0, 0, 0.02);
}

/* Highlight & Heading */
.sp-highlight,
.sp-heading {
	font-weight: bold;
}

